<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".MainActivity"
    android:id="@+id/l1"
    >

    <TextView
        android:id="@+id/date1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/date_top_margin"
        android:gravity="center"
        android:textSize="@dimen/date_size"
        android:textColor="@color/black"
        android:text="@string/top_heading"
         />
    // rent card view starts here
    <androidx.cardview.widget.CardView
        android:id="@+id/rent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/card_all_margin"
        android:layout_marginStart="@dimen/card_all_margin"
        android:layout_marginEnd="@dimen/card_all_margin"
        android:layout_marginBottom="@dimen/card_margin_down"
        app:cardBackgroundColor="@color/cardview_back"
        app:cardCornerRadius="@dimen/card_corner_radius"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/ic_bef_tv_size"
                android:layout_height="@dimen/ic_bef_tv_size"
                android:layout_marginStart="@dimen/ic_def_tv_mar_left"
                android:layout_marginEnd="@dimen/ic_def_tv_mar_right"
                android:layout_gravity="center"
                android:src="@drawable/home_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_rent"
            android:textSize="@dimen/card_text_size"
            android:padding="@dimen/card_padding_all"
            android:layout_marginTop="@dimen/tv_margin_top"
            android:textColor="@color/black"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    // rent card view ends here


    // Milk card view starts here
    <androidx.cardview.widget.CardView
        android:id="@+id/milk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginStart="@dimen/card_all_margin"
        android:layout_marginEnd="@dimen/card_all_margin"
        android:layout_marginBottom="@dimen/card_margin_down"
        app:cardBackgroundColor="@color/cardview_back"
        app:cardCornerRadius="@dimen/card_corner_radius"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/ic_bef_tv_size"
            android:layout_height="@dimen/ic_bef_tv_size"
            android:layout_marginStart="@dimen/ic_def_tv_mar_left"
            android:layout_marginEnd="@dimen/ic_def_tv_mar_right"
            android:layout_gravity="center"
            android:src="@drawable/milk_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/milk_use"
            android:textSize="@dimen/card_text_size"
            android:padding="@dimen/card_padding_all"
            android:layout_marginTop="@dimen/tv_margin_top"
            android:textColor="@color/black"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
// milk card view ends here

    // Items card view starts here
    <androidx.cardview.widget.CardView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginStart="@dimen/card_all_margin"
        android:layout_marginEnd="@dimen/card_all_margin"
        android:layout_marginBottom="@dimen/card_margin_down"
        app:cardBackgroundColor="@color/cardview_back"
        app:cardCornerRadius="@dimen/card_corner_radius"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/ic_bef_tv_size"
                android:layout_height="@dimen/ic_bef_tv_size"
                android:layout_marginStart="@dimen/ic_def_tv_mar_left"
                android:layout_marginEnd="@dimen/ic_def_tv_mar_right"
                android:layout_gravity="center"
                android:src="@drawable/items_icon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/items_inventory"
                android:textSize="@dimen/card_text_size"
                android:padding="@dimen/card_padding_all"
                android:layout_marginTop="@dimen/tv_margin_top"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    // Items card view ends here

</LinearLayout>